--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,21 @@
 !!! 5
 html(lang="de")
 	head
-		title="Patchcast"
+		title="PatchCast"
+		link(href='http://fonts.googleapis.com/css?family=Pacifico:regular', rel='stylesheet', type='text/css')
+		link(href='screen.css', rel='stylesheet', type='text/css')
 	body
-		h1 pathcast
-		h2 custom podcast feed
-		form(method='POST')
-			input(type='text', name='url', placeholder='enter your audio file url')
-			input(type='submit', value='add')
-		h3 podcast list
-		ul
-		- each item in items
-			li= item
+		#global
+			#content
+				h1 PatchCast
+				h2 custom podcast feed
+				form(method='post')
+					input(type='text', name='url', placeholder='paste your audio or video file url', autofocus)
+					input(type='submit', value='add')
+				h3 podcast list
+				ul
+				- if (entries)
+					- each entry in entries
+						li= entry.url + " - " + entry.timestamp
+				form(method='delete')
+					input(type='submit', value='clear')
