--- a/public/screen.styl
+++ b/public/screen.styl
@@ -26,14 +26,14 @@ form
 	margin 20px 0
 
 input[type=submit]
-input[type=text]
+input[type=url]
 	padding 5px 10px
 	font-size 22px
 	color #000
 	display inline-block
 	border 1px solid #000
 	
-input[type=text]
+input[type=url]
 	width 400px
 	margin-right 10px
 	border-radius 2px
