--- a/public/screen.styl
+++ b/public/screen.styl
@@ -3,8 +3,8 @@
 	padding 0
 
 body
-	font 14px "Helvetica Neue", "Lucida Grande", "Arial"
-	background url(images/back.png)
+	font 14px 'Helvetica Neue', arial, serif;
+	background url(images/back.png) top center
 
 h1
 	font 55px 'Pacifico', serif
@@ -14,6 +14,15 @@ h1
 h2
 	font-size 18px
 	font-weight normal
+	.icon
+		background url(images/feed.png)
+		height 12px
+		width 12px
+		margin 0 5px
+		display inline-block
+	.title
+		color black
+		text-decoration none
 
 #global
 	text-align center
@@ -23,7 +32,8 @@ h2
 	margin 50px auto
 
 form
-	margin 20px 0
+	margin 30px 0
+
 
 input[type=submit]
 input[type=url]
@@ -42,3 +52,27 @@ input[type=submit]
 	color white
 	background black
 	border-radius 2px
+
+.mejs-container
+	display inline-block
+	margin 4px 0
+
+article
+	list-style-type none
+	margin-bottom 30px
+	header
+		strong
+			font-size 22px
+			font-weight bold
+			display block
+		span
+			color #777
+			font-weight normal
+			display block
+	footer
+		a
+		span
+		time
+			color #777
+			display inline-block
+			margin 0 5px
