cleaned up list, rss feed titles

--- a/public/screen.styl
+++ b/public/screen.styl
@@ -1,6 +1,11 @@
 *
 	margin 0
 	padding 0
+	
+a
+	text-decoration none
+	&:hover
+		text-decoration underline
 
 body
 	font 14px 'Helvetica Neue', arial, serif;
@@ -22,7 +27,6 @@ h2
 		display inline-block
 	.title
 		color black
-		text-decoration none
 
 #global
 	text-align center
@@ -70,6 +74,7 @@ article
 			font-weight normal
 			display block
 	footer
+		color #777
 		a
 		span
 		time
