--- a/public/screen.css
+++ b/public/screen.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 body {
   font: 14px "Helvetica Neue", arial, serif;
   background: url("images/back.png") top center;
@@ -24,7 +30,6 @@ h2 .icon {
 }
 h2 .title {
   color: #000;
-  text-decoration: none;
 }
 #global {
   text-align: center;
@@ -71,6 +76,9 @@ article header span {
   color: #777;
   font-weight: normal;
   display: block;
+}
+article footer {
+  color: #777;
 }
 article footer a,
 article footer span,
