--- a/views/feed.jade
+++ b/views/feed.jade
@@ -1,7 +1,8 @@
 !!! xml
 rss(version=2.0)
 	channel
-		title
+		title= "PatchCast"
+		link= "http://patchcast.no.de"
 		lastBuildDate= new Date()
 		language= "de-de"
 		- each entry in entries
