--- a/public/screen.styl
+++ b/public/screen.styl
@@ -74,6 +74,7 @@ article
 			font-weight normal
 			display block
 	footer
+		font-size 13px
 		color #777
 		a
 		span
@@ -81,3 +82,7 @@ article
 			color #777
 			display inline-block
 			margin 0 5px
+			
+.clear
+	color #777
+	font-size 11px
